--- a/gadget.html
+++ b/gadget.html
@@ -4,6 +4,7 @@
   <Content type="html">
      <![CDATA[ 
        Hello, world!
+      <a href="http://google.com">google link</a>
      ]]>
   </Content> 
 </Module>
