--- a/gadget.html
+++ b/gadget.html
@@ -3,7 +3,8 @@
   <ModulePrefs title="hello world example" /> 
   <Content type="html">
      <![CDATA[ 
-       Hello, world!
+       Hello, world 2!
+<p>dggdsgs</p>
       <a href="http://google.com">google link</a>
      ]]>
   </Content> 
