--- a/gadget.html
+++ b/gadget.html
@@ -6,6 +6,7 @@
        Hello, world 2!
 <p>dggdsgs</p>
       <a href="http://google.com">google link</a>
+<a href="www.google.com" target="_blank">gOOgle</a>
      ]]>
   </Content> 
 </Module>
