--- a/gadget.html
+++ b/gadget.html
@@ -5,8 +5,8 @@
      <![CDATA[ 
        Hello, world 2!
 <p>dggdsgs</p>
-      <a href="http://google.com">google link</a>
-<a href="www.google.com" target="_blank">gOOgle</a>
+      <a href="http://www.google.com">google link</a>
+<a href="http://www.google.com" target="_blank">gOOgle</a>
      ]]>
   </Content> 
 </Module>
