--- a/gadget2.html
+++ b/gadget2.html
@@ -4,8 +4,7 @@
   <Content type="html">
      <![CDATA[ 
        Hello, world 2!
-<p>dggdsgs</p>
-      <a href="http://www.google.com">google link</a>
+<a href="http://www.google.com">google link</a></br>
 <a href="http://www.google.com" target="_blank">gOOgle</a>
      ]]>
   </Content> 
