--- a/gadget2.html
+++ b/gadget2.html
@@ -4,8 +4,12 @@
   <Content type="html">
      <![CDATA[ 
        Hello, world 2!
-<a href="http://www.google.com">google link</a></br>
-<a href="http://www.google.com" target="_blank">gOOgle</a>
+<a href="http://www.google.com">google link</a></br></br>
+<a href="http://www.google.com" target="_blank">google_blank</a></br>
+<a href="http://www.google.com" target="_self">google_self</a></br>
+<a href="http://www.google.com" target="_parent">google_parent</a></br>
+<a href="http://www.google.com" target="_top">google_top</a></br>
+<a href="http://www.google.com" target="framename">google_framename</a></br>
      ]]>
   </Content> 
 </Module>
