Update and rename gadgetewt2t.html to gadgetewft2t.html

--- a/gadgetewft2t.html
+++ b/gadgetewft2t.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?> 
 <Module>
   <ModulePrefs title="example" />
-  <UserPref name="myname" display_name="Name" default_value="https://tabemea.roche.com/views/Ipsbw_SapMon_Application_Availability/SAPApplicationAvailability&:toolbar=botton?:embed=y"/>
+  <UserPref name="myname" display_name="Name" default_value="cfadffsd"/>
   <Content type="html">
      <![CDATA[ 
       <!doctype html>
