Update and rename gadgetewft2t.html to gadgetewft2st.html

--- a/gadgetewft2st.html
+++ b/gadgetewft2st.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?> 
 <Module>
   <ModulePrefs title="example" />
-  <UserPref name="myname" display_name="Name" default_value="cfadffsd"/>
+  <UserPref name="myname" display_name="Name" default_value="https://tabemea.roche.com/views/Ipsbw_SapMon_Application_Availability/SAPApplicationAvailability&:toolbar=botton?embed=y"/>
   <Content type="html">
      <![CDATA[ 
       <!doctype html>
@@ -50,7 +50,7 @@
 				   function displayGreeting () {     
 					 var html = "";
 							 
-					 var element = document.getElementById('wrap');
+					 var element = document.getElementById('frame');
 					 
 
 					 html += "src=\""+ prefs.getString("myname")+"\"";
